spectec/test/elab/neg/type-vart-targ-arity-mismatch.t
  $ ./main.exe type-vart-targ-arity-mismatch.spectec 2>&1
  error[elab/vart-targ-arity-mismatch]: type arguments do not match
    --> type-vart-targ-arity-mismatch.spectec:5:14
    |
  5 | syntax bar = foo
    |              ^^^
    |
    | source: elab
  [1]
